To Command: list on sidebar with anchors

--- a/search/static/search/style.css
+++ b/search/static/search/style.css
@@ -64,6 +64,12 @@
     background: #f8fb3d;
 }
 
+/* Make anchors appear below the fixed navbar  */
+.myanchor {
+    padding-top: 75px;
+    margin-top: -75px;
+}
+
 /* On bootstrap 3, badges don't have context classes any more. Use this to use the ones of labels: label-success etc */
 .label-as-badge {
     border-radius: 1em;
