--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -99,6 +99,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
                 th {% trans "Title" %}
                 th {% trans "Author" %}
                 th {% trans "Price" %}
+                th {% trans "Discount" %} {{ 'grouped_dist[dist_name][0].discount' | ng}}%
                 th {% trans "Quantity left" %}
                 th {% trans "To command" %}
               tbody
@@ -110,6 +111,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
                   td.col-md-6: a(href="{{ 'card.get_absolute_url' | ng}}") {{ 'card.title' | ng }}
                   td.col-md-1 {{ 'card.authors_repr' | ng }}
                   td.col-md-1 {{ 'card.price' |ng }} €
+                  td.col-md-1 {{ 'card.price_discounted' |ng }} €
                   td.col-md-1 {{ 'card.quantity' |ng }}
                   td.col-md-1
                     input.my-number-input(type="number", min=0, max=99,
@@ -122,7 +124,8 @@ div(ng-cloak, ng-controller="basketToCommandController")
                   td.col-md-7 {% trans "Total" %}
                   td
                   td.col-md-1 {{ 'get_total_price(dist_name)' |ng}}  €
-                  td.col-md-1
+                  td.col-md-1 {{ 'get_total_price_discounted(dist_name)' |ng}}  €
+                  td
                   td.col-md-1 {{'get_total_copies(dist_name)'|ng}}
 
   // we'll use the modal shortly !
