--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -28,9 +28,9 @@ div
              span.caret
 
            ul.dropdown-menu
-             li: a(href="/history/sells/export?distributor_id={{ 'distributor.selected.id' | ng}}&month={{ 'user_date.getMonth() + 1' | ng }}&year={{ 'user_date.getFullYear()' | ng }}&format=txt") {% trans "Export selection" %} - txt
+             li: a(href="/history/sells/export?distributor_id={{ 'distributor.selected.id' | ng}}&month={{ 'getMonth()' | ng }}&year={{ 'user_date.getFullYear()' | ng }}&format=txt") {% trans "Export selection" %} - txt
              //- li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=txt&report=listing") {% trans "Export selection" %} - pdf
-             li: a(href="/history/sells/export?distributor_id={{ 'distributor.selected.id' | ng}}&month={{ 'user_date.getMonth() + 1' | ng }}&year={{ 'user_date.getFullYear()' | ng }}&format=csv") {% trans "Export selection" %} - csv
+             li: a(href="/history/sells/export?distributor_id={{ 'distributor.selected.id' | ng}}&month={{ 'getMonth()' | ng }}&year={{ 'user_date.getFullYear()' | ng }}&format=csv") {% trans "Export selection" %} - csv
 
 
       .col-md-3
