UI: stats' stock numbers in table

--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -28,10 +28,21 @@ div(ng-controller="dashboardController", ng-cloak="stats")
     .row.panel.panel-info
       h3.panel.panel-heading {% trans "Composition of the stock" %}
       div.panel.panel-body(ng-show="stats")
-        h4 {% trans "Number of products" %}: {{'stats.nb_products.value'|ng}}
-        h4 {% trans "Number of titles" %}: {{'stats.nb_titles.value'|ng }}
-        h4(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}') {% trans "Value of the stock" %}: {{'stats.total_cost.value'|ng }} €
-        h4(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}') {% trans "Value of the stock" %} {% trans "excl. tax" %}: {{'stats.total_cost_excl_tax.value'|ng }} €
+        table.table.table-condensed
+
+         tbody
+          tr
+            td: h4 {% trans "Number of products" %}
+            td: h4{{'stats.nb_products.value'|ng}}
+          tr
+            td: h4 {% trans "Number of titles" %}
+            td: h4 {{'stats.nb_titles.value'|ng }}
+          tr
+            td(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}'): h4 {% trans "Value of the stock" %}
+            td: h4 {{'stats.total_cost.value'|ng }} €
+          tr
+            td(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}'): h4 {% trans "Value of the stock" %} {% trans "excl. tax" %}
+            td: h4 {{'stats.total_cost_excl_tax.value'|ng }} €
 
     .row.panel.panel-info
       h3.panel.panel-heading {% trans "Next deposits to pay" %}
