Page title for Card details and Deposits
fixes #22 - Set the title of all pages

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -29,7 +29,7 @@ html(ng-app="abelujo")
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
-      div {% block pagetitle %} {% endblock %}
+    title {% block pagetitle %} {% endblock %}
 
   body.container-fullwidth(ng-controller="navbarController", style="padding-top: 60px;")
    nav.navbar.navbar-default.navbar-inverse.navbar-fixed-top.container-fluid(role="navigation")
