--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -15,6 +15,10 @@
 // along with Abelujo.  If not, see <http://www.gnu.org/licenses/>.
 {% extends "base.jade" %}
 
+{% block pagetitle %}
+{{ page_title }}
+{% endblock pagetitle%}
+
 {% block content %}
 
 {% load i18n %}
