--- a/templates/search/deposits_view.jade
+++ b/templates/search/deposits_view.jade
@@ -17,6 +17,10 @@
 
 {% block auto_command_nb %} {{ auto_command_nb }} {% endblock %}
 
+{% block pagetitle %}
+{{ page_title }}
+{% endblock pagetitle%}
+
 {% block content %}
 
 {% load i18n %}
