(minor) typo in Preferences

--- a/templates/search/preferences.jade
+++ b/templates/search/preferences.jade
@@ -51,7 +51,7 @@ div(ng-controller="preferencesController")
 
          .row
           h3 {% trans "VAT" %}
-          //- .col-md-6
+          .col-md-6
             h4 {% trans "VAT on books" %}
 
           .col-md-6
