--- a/templates/search/preferences.jade
+++ b/templates/search/preferences.jade
@@ -58,6 +58,13 @@ div(ng-controller="preferencesController")
             input(type="text", ng-model="vat_book")
 
          .row
+           h3 {% trans "User preferences" %}
+           .col-md-6
+             h3 {% trans "Language" %}
+           .col-md-6
+             select(ng-model="user_language", ng-options="it.name for it in language_choices")
+
+         .row
             .col-md-6
             .col-md-6
               button.btn.btn-success(type="submit", ng-disabled="! userForm.$dirty") {% trans "OK" %}
