--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -39,10 +39,10 @@ div(ng-controller="dashboardController", ng-cloak="stats")
             td: h4 {{'stats.nb_titles.value'|ng }}
           tr
             td(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}'): h4 {% trans "Value of the stock" %}
-            td: h4 {{'stats.total_cost.value'|ng }} €
+            td: h4 {{'stats.total_cost.value | currency'|ng }}
           tr
             td(title='{% trans "Cost of each card by its quantity in stock, rounded to the upper decimal." %}'): h4 {% trans "Value of the stock" %} {% trans "excl. tax" %}
-            td: h4 {{'stats.total_cost_excl_tax.value'|ng }} €
+            td: h4 {{'stats.total_cost_excl_tax.value | currency'|ng }}
 
     .row.panel.panel-info
       h3.panel.panel-heading {% trans "Next deposits to pay" %}
@@ -78,7 +78,7 @@ div(ng-controller="dashboardController", ng-cloak="stats")
 
   .col-lg-6
     .row.panel.panel-info
-      h3.panel.panel-heading {% trans "Revenue, monthly" %}: {{'sells_month.revenue'|ng}} {% trans "€" %}
+      h3.panel.panel-heading {% trans "Revenue, monthly" %}: {{'sells_month.revenue | currency'|ng}}
       div.panel.panel-body
 
         .col-md-4
@@ -101,7 +101,7 @@ div(ng-controller="dashboardController", ng-cloak="stats")
 
 
         .col-md-5
-          div {% trans "mean" %}: {{'sells_month.mean'|ng}} {% trans "€" %}
+          div {% trans "mean" %}: {{'sells_month.mean | currency'|ng}}
 
 
     .row.panel.panel-info
