(minor) Card add: price as nice currency (with specified symbol)

--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -25,7 +25,7 @@
 {% bootstrap_javascript %}
 
 div.ng-cloak(ng-controller="cardAddController")
-  h3 {{ "card.title" | ng}} ({{ "card.price" | ng }}€)
+  h3 {{ "card.title" | ng}} ({{ "card.price | currency: '€'" | ng }})
   .row
     table
       tr
